--- a/src/pages/dashboard_admin/dashboard2.module.scss
+++ b/src/pages/dashboard_admin/dashboard2.module.scss
@@ -9,10 +9,10 @@
   padding: 1rem;
   box-sizing: border-box;
   display: grid;
-  column-gap: 1rem;
+  column-gap: 2rem;
   //   row-gap: 0.5rem;
   // overflow-y: hidden;
-  grid-template-rows: repeat(7, [row-start] 5rem [row-end]) minmax(0rem, 1fr);
+  grid-template-rows: repeat(8, [row-start] 5rem [row-end]) minmax(0rem, 1fr);
   grid-template-columns: repeat(
     5,
     [col-small-start] minmax(0rem, 1fr) [col-small-end]
@@ -21,15 +21,16 @@
     grid-row: row-start 2 / row-end 4;
     grid-column: col-small-start 1 / col-small-end 3;
     display: flex;
-    flex-direction: row;
-    align-items: stretch;
-    justify-content: center;
-    column-gap: 1rem;
+    margin-left: 20px;
+    // flex-direction: row;
+    // align-items: stretch;
+    // justify-content: center;
+    column-gap: 2rem;
     color: #ffffff;
     &_item {
       flex: 1;
-      // min-width: 15rem;
-      border-radius: 25px;
+      // max-width: 20rem;
+      border-radius: 40px;
       padding: 1.5rem;
       // display: inline;
       // flex-direction: column;
@@ -49,19 +50,22 @@
   }
 
   &_widz {
-    grid-row: row-start 6 / row-end 7;
-    margin-top: 10%;
+    grid-row: row-start 7 / row-end 8;
+    // margin-top: 20%;
     //   display: flex;
     //   flex-direction: row;
     //   width: 20%;
+    // margin-left: 20px;
+    // margin-right: 20px;
     box-shadow: 0px 6px 30px rgba(0, 0, 0, 0.05);
     border-radius: 15px;
-    padding: 1.5rem;
+    padding: 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     img {
+      margin-top: 10%;
       height: 3rem;
       width: 3rem;
       object-fit: contain;
@@ -78,11 +82,13 @@
     }
   }
   &_title {
+    grid-row: row-start 6/ row-end 6;
+    // margin-left: 10%;
     font-size: larger;
     font-weight: 600;
-    margin-top: 23rem;
-    display: flex;
-    flex-direction: row;
+    // margin-top: 25rem;
+    // display: flex;
+    // flex-direction: row;
   }
   &_widz_1 {
     grid-column: col-small-start 1 / col-small-end 1;
@@ -111,15 +117,16 @@
   }
   &_piechart {
     grid-row: row-start 1 / row-end 5;
-    grid-column: col-small-start 4 / col-small-end 5;
+    grid-column: col-small-start 4/ col-small-end 5;
     background: #ffffff;
     box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.1);
-    border-radius: 20px;
+    border-radius: 40px;
     padding: 1rem;
+    margin-right: 10px;
     display: flex;
     flex-direction: column;
     // overflow: hidden;
-    overflow-y: auto;
+    overflow-y: scroll;
 
     &_header {
       margin-left: 2rem;
