--- a/src/pages/dashboard_admin/dashboard2.module.scss
+++ b/src/pages/dashboard_admin/dashboard2.module.scss
@@ -122,11 +122,13 @@
     box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.1);
     border-radius: 40px;
     padding: 1rem;
-    margin-right: 10px;
+    margin-right: 40px;
+    margin-left: 20px;
     display: flex;
     flex-direction: column;
     // overflow: hidden;
-    overflow-y: scroll;
+    // overflow-y: scroll;
+
 
     &_header {
       margin-left: 2rem;
@@ -146,4 +148,14 @@
   &_orange {
     background: #887df4;
   }
+}
+
+.add_hospital{
+  background-color: white;
+  margin-left:5rem;
+  padding: 30px;
+  border-radius:30px;
+  width: 250%;
+  height: 600%;
+  margin-top: 6rem;
 }
