--- a/src/pages/dashboard_admin/dashboard2.module.scss
+++ b/src/pages/dashboard_admin/dashboard2.module.scss
@@ -4,7 +4,7 @@
   padding: 2rem;
   flex-direction: column;
   background: transparent;
-  margin-top: 1rem;
+  margin-top: 2rem;
   border-radius: 40px;
   padding: 1rem;
   box-sizing: border-box;
@@ -12,20 +12,20 @@
   column-gap: 2rem;
   //   row-gap: 0.5rem;
   // overflow-y: hidden;
-  grid-template-rows: repeat(8, [row-start] 5rem [row-end]) minmax(0rem, 1fr);
+  grid-template-rows: repeat(7, [row-start] 5rem [row-end]) minmax(0rem, 1fr);
   grid-template-columns: repeat(
     5,
     [col-small-start] minmax(0rem, 1fr) [col-small-end]
   );
   &_cards {
     grid-row: row-start 2 / row-end 4;
-    grid-column: col-small-start 1 / col-small-end 3;
+    grid-column: col-small-start 1 / col-small-end 5;
     display: flex;
-    margin-left: 20px;
+    // margin-left: 20px;
     // flex-direction: row;
     // align-items: stretch;
     // justify-content: center;
-    column-gap: 2rem;
+    column-gap: 3rem;
     color: #ffffff;
     &_item {
       flex: 1;
@@ -41,10 +41,15 @@
         width: 5rem;
         object-fit: contain;
       }
+      h2 {
+        // margin-top: auto;
+        // font-size: x-large;
+        margin-bottom: 0rem;
+      }
       p {
-        font-size: large;
-        // margin-top: 0rem;
-        text-transform: capitalize;
+        color: white;
+        font-size: larger;
+        margin: 0rem;
       }
     }
   }
@@ -83,9 +88,10 @@
   }
   &_title {
     grid-row: row-start 6/ row-end 6;
+    color: #0055a3;
     // margin-left: 10%;
     font-size: larger;
-    font-weight: 600;
+    font-weight: 700;
     // margin-top: 25rem;
     // display: flex;
     // flex-direction: row;
@@ -115,38 +121,41 @@
 
     background-color: #fbb892;
   }
-  &_piechart {
-    grid-row: row-start 1 / row-end 5;
-    grid-column: col-small-start 4/ col-small-end 5;
-    background: #ffffff;
-    box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.1);
-    border-radius: 40px;
-    padding: 1rem;
-    margin-right: 40px;
-    margin-left: 20px;
-    display: flex;
-    flex-direction: column;
-    // overflow: hidden;
-    // overflow-y: scroll;
+//   &_piechart {
+//     grid-row: row-start 1 / row-end 5;
+//     grid-column: col-small-start 4/ col-small-end 5;
+//     background: #ffffff;
+//     box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.1);
+//     border-radius: 40px;
+//     padding: 1rem;
+//     margin-right: 40px;
+//     margin-left: 20px;
+//     display: flex;
+//     flex-direction: column;
+//     // overflow: hidden;
+//     // overflow-y: scroll;
 
 
-    &_header {
-      margin-left: 2rem;
-      color: #1977f3;
-      font-weight: 600;
-      display: flex;
-      justify-content: left;
-      font-size: 1rem;
-    }
-  }
+//     &_header {
+//       margin-left: 2rem;
+//       color: #1977f3;
+//       font-weight: 600;
+//       display: flex;
+//       justify-content: left;
+//       font-size: 1rem;
+//     }
+//   }
 }
 
 .card {
   &_violet {
-    background: #ef8b83;
+    background: #887df4;
   }
   &_orange {
-    background: #887df4;
+    background: #f7ad6c;
+  }
+  &_pink {
+    background: #ef8b83;
   }
 }
 
@@ -155,7 +164,7 @@
   margin-left:5rem;
   padding: 30px;
   border-radius:30px;
-  width: 250%;
-  height: 600%;
+  width: 270%;
+  height: 720%;
   margin-top: 6rem;
 }
